--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -3,14 +3,12 @@
     right: 0;
     top: 50%;
     transform: translateY(-50%);
-    height: 12rem;
 
     width: fit-content;
     padding: 0 0.5rem;
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     gap: 2rem;
 
      a {
@@ -21,8 +19,10 @@
     .fab {
         padding: 0.5rem;
         pointer-events: auto;
+
         display: grid;
         place-content: center;
+        
         font-size: 1.1rem;
         background-color: $base-white;
         border-radius: 50%;
@@ -39,6 +39,7 @@
             font-size: 0.8rem;
             font-family: $primary-font;
             background-color: inherit;
+
             display: grid;
             place-content: center;
             border-radius: 0.5rem;
@@ -49,7 +50,7 @@
             
             transform-origin: left;
             transform: rotate(-90deg);  
-            opacity: 0;        
+            visibility: hidden;        
             transition: all 200ms ease-in-out;
         }
     }
@@ -60,7 +61,7 @@
         &::after {
             color: inherit;
             transform: rotate(0);
-            opacity: 1;
+            visibility: visible;
         }
     }
 
